# unicorn

./: README.md
.github/workflows/: cmake.yml  micropython.yml  python-linting.yml
boards/: enable_cyw43.h  manifest-common.py  multicore_lockout.patch  pico2_w_cyw43.patch  usermod-common.cmake
boards/pico2_w_cosmic/: mpconfigboard.cmake  mpconfigboard.h  usermodules.cmake
boards/pico2_w_galactic/: manifest.txt  mpconfigboard.cmake  mpconfigboard.h  usermodules.cmake
boards/pico2_w_stellar/: mpconfigboard.cmake  mpconfigboard.h  usermodules.cmake
boards/pico2_w_unicorn/: mpconfigboard.h  usermodules.cmake
boards/pico_w_cosmic/: manifest.py  mpconfigboard.cmake  mpconfigboard.h  usermodules.cmake
boards/pico_w_galactic/: mpconfigboard.cmake  mpconfigboard.h  usermodules.cmake
boards/pico_w_stellar/: mpconfigboard.cmake  mpconfigboard.h  usermodules.cmake
boards/pico_w_unicorn/: mpconfigboard.h  usermodules.cmake
ci/: micropython.sh  python.sh
docs/: inky_frame.md
examples/c++/cosmic_unicorn/: CMakeLists.txt
examples/c++/galactic_unicorn/: CMakeLists.txt
examples/cosmic_unicorn/: README.md  cheerlights_history.py  clock.py  eighties_super_computer.py  exchange_ticker.py  feature_test.py  feature_test_with_audio.py  fire_effect.py  lava_lamp.py  nostalgia_prompt.py  rainbow.py  scrolling_text.py  today.py
examples/cosmic_unicorn/audio/: audio.py  countdown_with_alarm.py
examples/cosmic_unicorn/cosmic_paint/: README.md  cosmic_paint.py
examples/cosmic_unicorn/http_text/: html_text.py
examples/cosmic_unicorn/launch/: fire.py  rainbow.py  today.py
examples/cosmic_unicorn/numpy/: fire_effect.py  rgb_channels.py  this_is_fine.py
examples/cosmic_unicorn/weather/: weather.py
examples/galactic_unicorn/: README.md  cheerlights.py  cheerlights_history.py  clock.py  eighties_super_computer.py  feature_test.py  feature_test_with_audio.py  fire_effect.py  lava_lamp.py  nostalgia_prompt.py  rainbow.py  scrolling_text.py
examples/galactic_unicorn/audio/: audio.py  countdown_with_alarm.py
examples/galactic_unicorn/galactic_paint/: README.md  galactic_paint.py
examples/galactic_unicorn/launch/: fire.py  rainbow.py  retroprompt.py
examples/galactic_unicorn/numpy/: fire_effect.py  this_is_fine.py
examples/stellar_unicorn/: README.md  cheerlights_history.py  clock.py  eighties_super_computer.py  encoder_wheel.py  exchange_ticker.py  feature_test.py  feature_test_with_audio.py  fire_effect.py  lava_lamp.py  nostalgia_prompt.py  rainbow.py  scrolling_text.py  today.py
examples/stellar_unicorn/audio/: audio.py  countdown_with_alarm.py
examples/stellar_unicorn/http_text/: html_text.py
examples/stellar_unicorn/launch/: fire.py  rainbow.py  today.py
examples/stellar_unicorn/numpy/: fire_effect.py  rgb_channels.py  this_is_fine.py
examples/stellar_unicorn/stellar_paint/: README.md  stellar_paint.py
examples/stellar_unicorn/weather/: weather.py
firmware/PIMORONI_COSMIC_UNICORN/: board.json  manifest.py  micropython.cmake  mpconfigboard.cmake  mpconfigboard.h
firmware/PIMORONI_GALACTIC_UNICORN/: board.json  manifest.py  micropython.cmake  mpconfigboard.cmake  mpconfigboard.h
modules/wireless/: ezwifi.py
