cmake_minimum_required(VERSION 3.12)

include(../../../firmware/pimoroni_pico_import.cmake)
include(../pico_sdk_import.cmake)

project("Cosmic Unicorn Examples" C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)

pico_sdk_init()

include(libraries/cosmic_unicorn/cosmic_unicorn)
include(libraries/pico_graphics/pico_graphics)

add_executable(cosmic_rainbow_text cosmic_rainbow_text.cpp)
target_link_libraries(cosmic_rainbow_text pico_stdlib hardware_pio hardware_adc hardware_dma pico_graphics cosmic_unicorn)
pico_enable_stdio_usb(cosmic_rainbow_text 1)
pico_add_extra_outputs(cosmic_rainbow_text)

add_executable(cosmic_rainbow cosmic_rainbow.cpp)
target_link_libraries(cosmic_rainbow pico_stdlib hardware_pio hardware_adc hardware_dma pico_graphics cosmic_unicorn)
pico_enable_stdio_usb(cosmic_rainbow 1)
pico_add_extra_outputs(cosmic_rainbow)

add_executable(cosmic_eighties_super_computer cosmic_eighties_super_computer.cpp)
target_link_libraries(cosmic_eighties_super_computer pico_stdlib hardware_pio hardware_adc hardware_dma pico_graphics cosmic_unicorn)
pico_enable_stdio_usb(cosmic_eighties_super_computer 1)
pico_add_extra_outputs(cosmic_eighties_super_computer)

add_executable(cosmic_fire_effect cosmic_fire_effect.cpp)
target_link_libraries(cosmic_fire_effect pico_stdlib hardware_pio hardware_adc hardware_dma pico_graphics cosmic_unicorn)
pico_enable_stdio_usb(cosmic_fire_effect 1)
pico_add_extra_outputs(cosmic_fire_effect)

add_executable(cosmic_scroll_text cosmic_scroll_text.cpp)
target_link_libraries(cosmic_scroll_text pico_stdlib hardware_pio hardware_adc hardware_dma pico_graphics cosmic_unicorn)
pico_enable_stdio_usb(cosmic_scroll_text 1)
pico_add_extra_outputs(cosmic_scroll_text)

add_executable(cosmic_lava_lamp cosmic_lava_lamp.cpp)
target_link_libraries(cosmic_lava_lamp pico_stdlib hardware_pio hardware_adc hardware_dma pico_graphics cosmic_unicorn)
pico_enable_stdio_usb(cosmic_lava_lamp 1)
pico_add_extra_outputs(cosmic_lava_lamp)
